--- a/UnsecuredAPIKeys.CLI/UnsecuredAPIKeys.CLI.csproj
+++ b/UnsecuredAPIKeys.CLI/UnsecuredAPIKeys.CLI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,21 @@
     <Nullable>enable</Nullable>
     <AssemblyName>unsecuredapikeys</AssemblyName>
     <RootNamespace>UnsecuredAPIKeys.CLI</RootNamespace>
+    <Product>UnsecuredAPIKeys - Open Source</Product>
+    <Authors>https://github.com/TSCarterJr/UnsecuredAPIKeys-OpenSource/</Authors>
+    <Company>https://github.com/TSCarterJr/UnsecuredAPIKeys-OpenSource/</Company>
+    <PackageProjectUrl>https://github.com/TSCarterJr/UnsecuredAPIKeys-OpenSource/</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/TSCarterJr/UnsecuredAPIKeys-OpenSource/</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+    <AnalysisLevel>latest-recommended</AnalysisLevel>
+    <Version>1.0.0</Version>
+
+    <!-- Single-file publishing settings -->
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
+    <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
   </PropertyGroup>
 
   <ItemGroup>
